--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@ jobs:
       - checkout
       - setup_remote_docker:
           version: 18.09.3
+      - run: docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
       - run: |
-          docker buildx build \
+          docker buildx build --push \
             --platform linux/arm/v7,linux/arm64/v8,linux/amd64 \
             --tag petercb/dragonfly-mc .
